fixed modal issues that includes: overflow, scroll, modal max-height and scrollbars

--- a/src/components/form/ChainSelector.module.scss
+++ b/src/components/form/ChainSelector.module.scss
@@ -38,6 +38,8 @@
     margin-left: 6px;
     height: 100%;
     overflow-y: scroll;
+    max-height: 125px;
+    margin-top: 0;
 
     &::-webkit-scrollbar {
       width: 12px;
@@ -56,7 +58,7 @@
   }
 
   .options__container__small {
-    max-height: 120px;
+    max-height: 125px;
   }
 
   button {
